CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.13

	- The text filter now supports non-integer cpi and lpi
	  values.
	- The Margins field in the CUPS raster header was not
	  initialized by the pstoraster filter.
	- Added --with-optim="flags" option to configure script.
	- Updated the Italian message translations.
	- Updated the cups.list file to install the correct
	  files.
	- The pstoraster filter accessed the third element of a
	  2 element array.
	- The scheduler did not setup a status pipe for polling
	  processes, so error messages went to whatever file
	  descriptor 2 was pointing to when they were started.
	- The httpMD5Final() function didn't put a colon between
	  the password and nonce strings.
	- The pstops filter did not default to Binary data for
	  "%%BeginData:".
	- The pstops filter did not stop processing when a line
	  containing a CTRL-D is seen.
	- The scheduler no longer replaces the JobSheets values
	  from the printers.conf and classes.conf files with the
	  classification level, if set.  This way the original
	  banner settings are preserved when classification
	  levels are changed or turned off.
	- The serial backend didn't drain the output queue, nor
	  did it restore the original settings.
	- Updated the default system group under MacOS X.
	- If no SystemGroup was defined in cupsd.conf, the
	  system default group was not used.
	- The cups-lpd mini-daemon now supports LPD clients that
	  send multiple control files.
	- httpConnectEncrypt() now always uses encryption for
	  connections on port 443, since port 443 is reserved
	  for the "https" scheme.
	- Group authentication via certificates did not work
	  from the web interface for accounts other than
	  "root".	
	- The serial port backend did not clear the OPOST
	  option, which could cause problems with some printers.
	- The cups-lpd mini-daemon didn't lookup the client IP
	  address properly.
	- The parallel backend now identifies the polled and